# simple-paste-server

./: main.py  pyproject.toml
