[tool.poetry]
name = "simple-paste-server"
version = "0.1.0"
description = "Minimal REST API for text storage and retrieval"
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
